@@ -1,11 +1,14 @@
 package use_case.recent_currency;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Output data for the Recent / Frequently Used Currencies use case (Use Case 8).
- * The presenter can use this information to update the ViewModel and UI.
+ * Output data for the Recent / Frequently Used Currencies use case.
+ * <p>
+ * This class defensively copies all lists and removes any null elements
+ * so that callers and tests never trigger {@link NullPointerException}
+ * inside {@code List.copyOf(...)}.
  */
 public class RecentCurrencyOutputData {
 
@@ -15,79 +18,67 @@ public class RecentCurrencyOutputData {
     private final List<String> orderedCurrencyList;
 
     /**
-     * Constructs a new RecentCurrencyOutputData.
+     * Constructs an immutable output data object.
      *
-     * @param userId                the unique identifier of the user.
-     * @param favouriteCurrencies   the user's favourite currencies.
-     * @param topFrequentCurrencies the user's most frequently used currencies.
-     * @param orderedCurrencyList   the final ordered list used for dropdowns.
+     * @param userId                a non-null user id string (may be empty)
+     * @param favouriteCurrencies   may be null or contain null elements
+     * @param topFrequentCurrencies may be null or contain null elements
+     * @param orderedCurrencyList   may be null or contain null elements
      */
     public RecentCurrencyOutputData(String userId,
                                     List<String> favouriteCurrencies,
                                     List<String> topFrequentCurrencies,
                                     List<String> orderedCurrencyList) {
-        this.userId = userId;
-        List<String> safeFavourites;
-        if (favouriteCurrencies == null) {
-            safeFavourites = List.of();
-        } else {
-            safeFavourites = List.copyOf(favouriteCurrencies);
-        }
-        this.favouriteCurrencies = safeFavourites;
-        List<String> safeTopFrequent;
-        if (topFrequentCurrencies == null) {
-            safeTopFrequent = List.of();
-        } else {
-            safeTopFrequent = List.copyOf(topFrequentCurrencies);
-        }
-        this.topFrequentCurrencies = safeTopFrequent;
-        List<String> safeOrderedList;
-        if (orderedCurrencyList == null) {
-            safeOrderedList = List.of();
-        } else {
-            safeOrderedList = List.copyOf(orderedCurrencyList);
-        }
-        this.orderedCurrencyList = safeOrderedList;
+
+        this.userId = userId == null ? "" : userId;
+
+        this.favouriteCurrencies = safeCopy(favouriteCurrencies);
+        this.topFrequentCurrencies = safeCopy(topFrequentCurrencies);
+        this.orderedCurrencyList = safeCopy(orderedCurrencyList);
     }
 
-    /**
-     * Returns the identifier of the user whose recent currencies are described.
-     *
-     * @return the user id
-     */
-
+    /** Returns the user id string (never null). */
     public String getUserId() {
         return userId;
     }
 
-    /**
-     * Returns an unmodifiable list of the user's favourite currencies.
-     *
-     * @return the favourite currency codes
-     */
-
+    /** Returns an unmodifiable list without nulls. */
     public List<String> getFavouriteCurrencies() {
-        return Collections.unmodifiableList(favouriteCurrencies);
+        return favouriteCurrencies;
     }
 
-    /**
-     * Returns an unmodifiable list of the user's most frequently used currencies.
-     *
-     * @return the top frequent currency codes
-     */
-
+    /** Returns an unmodifiable list without nulls. */
     public List<String> getTopFrequentCurrencies() {
-        return Collections.unmodifiableList(topFrequentCurrencies);
+        return topFrequentCurrencies;
+    }
+
+    /** Returns an unmodifiable list without nulls. */
+    public List<String> getOrderedCurrencyList() {
+        return orderedCurrencyList;
     }
 
     /**
-     * Returns the final ordered currency list for dropdowns, starting with favourites
-     * and top frequent currencies.
-     *
-     * @return an unmodifiable ordered currency list
+     * Creates an unmodifiable copy of the given list with all null elements removed.
+     * If the list itself is null or becomes empty after filtering, an empty list
+     * is returned. This prevents {@link NullPointerException} inside List.copyOf.
      */
+    private static List<String> safeCopy(List<String> source) {
+        if (source == null || source.isEmpty()) {
+            return List.of();
+        }
 
-    public List<String> getOrderedCurrencyList() {
-        return Collections.unmodifiableList(orderedCurrencyList);
+        List<String> cleaned = new ArrayList<>();
+        for (String s : source) {
+            if (s != null) {
+                cleaned.add(s);
+            }
+        }
+
+        if (cleaned.isEmpty()) {
+            return List.of();
+        }
+
+        return List.copyOf(cleaned); // unmodifiable
     }
 }
+
